# rustdesk

./: Cargo.toml  build.py
.github/workflows/: flutter-build-test.yml  flutter-build-test2.yml  flutter-build-test3.yml  flutter-build.yml  flutter-tag-test.yml  flutter-tag-test2.yml  flutter-tag-test3.yml  flutter-tag.yml
appimage/: AppImageBuilder-aarch64-sciter.yml  AppImageBuilder-aarch64.yml  AppImageBuilder-x86_64.yml
flutter/lib/: common.dart  main.dart
flutter/linux/: CMakeLists.txt  main.cc  my_application.cc
flutter/windows/: CMakeLists.txt
libs/portable/: Cargo.toml  generate.py
libs/portable/src/: bin_reader.rs  main.rs
res/: com.rustdesk.RustDesk.policy  rustdesk-link.desktop  rustdesk.desktop  rustdesk.service  setup.nsi
res/.devcontainer/: build.sh
res/DEBIAN/: postinst  postrm  preinst  prerm
res/msi/: preprocess.py
src/: client.rs  common.rs  flutter.rs  flutter_ffi.rs  keyboard.rs  lang.rs  main.rs  ui.rs  ui_interface.rs  virtual_display_manager.rs
src/hbbs_http/: sync.rs
src/lang/: ar.rs  bg.rs  ca.rs  cn.rs  cs.rs  da.rs  de.rs  el.rs  en.rs  eo.rs  es.rs  et.rs  fa.rs  fr.rs  he.rs  hr.rs  hu.rs  id.rs  it.rs  ja.rs  ko.rs  kz.rs  lt.rs  lv.rs  nb.rs  nl.rs  pl.rs  pt_PT.rs  ptbr.rs  ro.rs  ru.rs  sk.rs  sl.rs  sq.rs  sr.rs  sv.rs  template.rs  th.rs  tr.rs  tw.rs  (+2 more)
src/platform/: windows.rs
src/plugin/: callback_ext.rs  manager.rs  mod.rs  native.rs  plugins.rs
src/privacy_mode/: win_topmost_window.rs  win_virtual_display.rs
src/server/: dbus.rs  portable_service.rs  uinput.rs
src/ui/: ab.tis  index.tis  install.tis
(+37 files in other folders)
