[package]
name = "cscpassist-portable-packer"
version = "1.2.6"
edition = "2021"
description = "CscpAssist Remote Desktop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
brotli = "3.4"
dirs = "5.0"
md5 = "0.7"
winapi = { version = "0.3", features = ["winbase"] }

[package.metadata.winres]
LegalCopyright = "Copyright © 2024 CSCP Team. All rights reserved."
ProductName = "CscpAssist"
OriginalFilename = "cscpassist.exe"
FileDescription = "CscpAssist Remote Desktop"
#ProductVersion = ""

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1"
winapi = { version = "0.3", features = [ "winnt", "pdh", "synchapi" ] }


